[gd_scene load_steps=11 format=2]

[ext_resource path="res://boss/script/boss.gd" type="Script" id=1]
[ext_resource path="res://boss/scene/radial laser v1.tscn" type="PackedScene" id=2]
[ext_resource path="res://boss/res/flatten_character-Sheet.png" type="Texture" id=3]
[ext_resource path="res://boss/scene/radial laser v2.tscn" type="PackedScene" id=4]
[ext_resource path="res://items/GOTHIC.TTF" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 250, 250 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 7000, 1000, 1000 ), Rect2( 1000, 7000, 1000, 1000 ), Rect2( 2000, 7000, 1000, 1000 ), Rect2( 3000, 7000, 1000, 1000 ), Rect2( 4000, 7000, 1000, 1000 ), Rect2( 5000, 7000, 1000, 1000 ), Rect2( 6000, 7000, 1000, 1000 ), Rect2( 7000, 7000, 1000, 1000 ), Rect2( 8000, 7000, 1000, 1000 ), Rect2( 9000, 7000, 1000, 1000 ), Rect2( 10000, 7000, 1000, 1000 ), Rect2( 11000, 7000, 1000, 1000 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 1000, 1000 ), Rect2( 1000, 0, 1000, 1000 ), Rect2( 2000, 0, 1000, 1000 ), Rect2( 3000, 0, 1000, 1000 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.5
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 1000, 1000, 1000 ), Rect2( 1000, 1000, 1000, 1000 ), Rect2( 2000, 1000, 1000, 1000 ), Rect2( 3000, 1000, 1000, 1000 ), Rect2( 4000, 1000, 1000, 1000 ) ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="p1melle" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 3000, 7000, 1000, 1000 )

[node name="spikeball" type="Timer" parent="."]

[node name="radial laser v1" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 21.3574, -170.859 )

[node name="radial laser v2" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 21.3574, -172.194 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -248.245
margin_top = -276.143
margin_right = 246.755
margin_bottom = -241.143
max_value = 1000.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ProgressBar"]
margin_left = 0.643188
margin_top = -0.940552
margin_right = 496.643
margin_bottom = 33.0594
custom_fonts/normal_font = SubResource( 2 )
text = "The Golem: King of the center of the earth"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")
anims/death = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/laser = SubResource( 5 )

[node name="home" type="Timer" parent="."]

[connection signal="timeout" from="p1melle" to="." method="_on_p1melle_timeout"]
[connection signal="timeout" from="spikeball" to="." method="_on_spikeball_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="home" to="." method="_on_home_timeout"]
